Updated design removed line and ensured that initial city visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,6 @@ a {
 }
 
 header {
-    border-bottom: 1px solid rgb(207, 205, 205);
     padding: 0 0 30px 0;
 
 }
@@ -170,11 +169,12 @@ main {
 
 footer {
     border-top: 1px solid rgb(207, 205, 2050);
-    padding: 30px 0 0 0;
+    padding: 10px 0 0 0;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     color: rgba(0, 0, 0, 0.6);
 }
+
 
 @media (max-width: 768px) {
   .weather-layout {
